update swagger, add rpc_server
