# swagger/python-flask-server-generated/swagger_server/models/__init__.py
@@ -5,6 +5,9 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.category import Category
 from swagger_server.models.model import Model
+from swagger_server.models.operation import Operation
+from swagger_server.models.operations import Operations
 from swagger_server.models.raspi import Raspi
+from swagger_server.models.schedule import Schedule
 from swagger_server.models.tag import Tag
 from swagger_server.models.user import User
