# swagger/python-flask-server-generated/swagger_server/models/operation.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Operation(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, command: str=None, repeat: float=None):  # noqa: E501
+        """Operation - a model defined in Swagger
+
+        :param command: The command of this Operation.  # noqa: E501
+        :type command: str
+        :param repeat: The repeat of this Operation.  # noqa: E501
+        :type repeat: float
+        """
+        self.swagger_types = {
+            'command': str,
+            'repeat': float
+        }
+
+        self.attribute_map = {
+            'command': 'command',
+            'repeat': 'repeat'
+        }
+
+        self._command = command
+        self._repeat = repeat
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Operation':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Operation of this Operation.  # noqa: E501
+        :rtype: Operation
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def command(self) -> str:
+        """Gets the command of this Operation.
+
+
+        :return: The command of this Operation.
+        :rtype: str
+        """
+        return self._command
+
+    @command.setter
+    def command(self, command: str):
+        """Sets the command of this Operation.
+
+
+        :param command: The command of this Operation.
+        :type command: str
+        """
+
+        self._command = command
+
+    @property
+    def repeat(self) -> float:
+        """Gets the repeat of this Operation.
+
+
+        :return: The repeat of this Operation.
+        :rtype: float
+        """
+        return self._repeat
+
+    @repeat.setter
+    def repeat(self, repeat: float):
+        """Sets the repeat of this Operation.
+
+
+        :param repeat: The repeat of this Operation.
+        :type repeat: float
+        """
+
+        self._repeat = repeat
