# swagger/python-flask-server-generated/swagger_server/models/schedule.py
@@ -1,0 +1,143 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.operations import Operations  # noqa: F401,E501
+from swagger_server import util
+
+
+class Schedule(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name: str=None, time: str=None, message: str=None, operations: Operations=None):  # noqa: E501
+        """Schedule - a model defined in Swagger
+
+        :param name: The name of this Schedule.  # noqa: E501
+        :type name: str
+        :param time: The time of this Schedule.  # noqa: E501
+        :type time: str
+        :param message: The message of this Schedule.  # noqa: E501
+        :type message: str
+        :param operations: The operations of this Schedule.  # noqa: E501
+        :type operations: Operations
+        """
+        self.swagger_types = {
+            'name': str,
+            'time': str,
+            'message': str,
+            'operations': Operations
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'time': 'time',
+            'message': 'message',
+            'operations': 'operations'
+        }
+
+        self._name = name
+        self._time = time
+        self._message = message
+        self._operations = operations
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Schedule':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Schedule of this Schedule.  # noqa: E501
+        :rtype: Schedule
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this Schedule.
+
+
+        :return: The name of this Schedule.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Schedule.
+
+
+        :param name: The name of this Schedule.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def time(self) -> str:
+        """Gets the time of this Schedule.
+
+
+        :return: The time of this Schedule.
+        :rtype: str
+        """
+        return self._time
+
+    @time.setter
+    def time(self, time: str):
+        """Sets the time of this Schedule.
+
+
+        :param time: The time of this Schedule.
+        :type time: str
+        """
+
+        self._time = time
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this Schedule.
+
+
+        :return: The message of this Schedule.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this Schedule.
+
+
+        :param message: The message of this Schedule.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def operations(self) -> Operations:
+        """Gets the operations of this Schedule.
+
+
+        :return: The operations of this Schedule.
+        :rtype: Operations
+        """
+        return self._operations
+
+    @operations.setter
+    def operations(self, operations: Operations):
+        """Sets the operations of this Schedule.
+
+
+        :param operations: The operations of this Schedule.
+        :type operations: Operations
+        """
+
+        self._operations = operations
